Pushing all updates

--- a/temporal_analysis_brownlees.ipynb
+++ b/temporal_analysis_brownlees.ipynb
@@ -23,33 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "cb356ae1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['SentAt', 'Control', 'Sad', 'Intrusion', 'Encourage', 'FunThings',\n",
-       "       'IgotThis', 'Company', 'Alone', 'Thoughts', 'Safe', 'Appointments',\n",
-       "       'Cancel', 'Laying', 'Sleep', 'Out', 'Eaten', 'Avoid', 'Useful ',\n",
-       "       'Enjoy', 'Pleas', 'Unpl', 'id_var', 'Date', 'Date_2', 'Hour',\n",
-       "       'beep_var', 'day_var', 'consecutive'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b0785668",
    "metadata": {},
    "outputs": [
@@ -103,12 +77,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "980f8351",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns = ['StartedAt', 'Qualitysleep', 'Pleasant', 'Unpleasant', 'Remarks'])"
+    "#high number of nas so we drop them\n",
+    "df = df.drop(columns = ['StartedAt', 'Qualitysleep', 'Pleasant', 'Unpleasant', 'Remarks'])\n",
+    "#note that we still capture pleasant and unpleasant through the binary variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2b02ad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21    691\n",
+       "0     544\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check if the nas are just empty observations for all variables\n",
+    "na_count = [df.iloc[x, :].isna().sum() for x in range(0, len(df))]\n",
+    "pd.Series(na_count).value_counts()\n",
+    "#yes they are"
    ]
   },
   {
@@ -118,12 +120,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#drop all observations hich have all missing except for SentAt\n",
+    "#therefore we drop all observations (rows) that are incomplete\n",
     "to_drop =  ['Control', 'Sad', 'Intrusion', 'Encourage',\n",
     "       'FunThings', 'IgotThis', 'Company', 'Alone', 'Thoughts', 'Safe',\n",
     "       'Appointments', 'Cancel', 'Laying', 'Sleep', 'Out',\n",
     "       'Eaten', 'Avoid', 'Useful ', 'Enjoy', 'Pleas', 'Unpl']\n",
-    "\n",
+    "#select only rows that have complete data\n",
     "df = df.dropna(subset = to_drop, how = 'any', axis=0)"
    ]
   },
@@ -140,35 +142,39 @@
     "df['Date'] = pd.to_datetime(df['SentAt'], format = '%d/%m/%Y %H:%M')\n",
     "#get the date and hour\n",
     "df['Date_2'] = [d.strftime(\"%x\") for d in df['Date']]\n",
-    "df['Hour'] = [d.strftime(\"%H\") for d in df['Date']]\n",
-    "#make the beepvar required for graphicalvar\n",
+    "df['Hour'] = [d.strftime(\"%H\") for d in df['Date']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fa2f3d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##below we create a beep_var - i.e. a unique identifier for the 'beep' for a given day. Required for graphicalvar.\n",
+    "#Groupings are because the timing of survey completion changes during the period examined.\n",
     "df['first_obs'] = [1 if (x == '09' or x == '10') else 0 for x in df['Hour']]\n",
     "df['second_obs'] = [2 if (x == '15' or x == '16') else 0 for x in df['Hour']]\n",
     "df['third_obs'] = [3 if (x == '21' or x == '22') else 0 for x in df['Hour']]\n",
     "df['beep_var'] = df['first_obs'] + df['second_obs'] + df['third_obs']\n",
+    "\n",
+    "#below we create a day_var - i.e. a unique identifier for the day of completion. Required for graphicalvar. \n",
+    "day_var = pd.DataFrame(pd.date_range(df['Date'].min(), df['Date'].max()))\n",
+    "day_var.columns = ['Date_Range']\n",
+    "day_var['day_var'] = [d.strftime(\"%x\") for d in day_var['Date_Range']]\n",
+    "day_var = day_var.drop('Date_Range', axis = 1).reset_index()\n",
+    "df = df.merge(day_var, how = 'left', left_on = 'Date_2', right_on = 'day_var')\n",
+    "\n",
+    "\n",
     "#order by date\n",
     "df = df.sort_values(by='Date')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "624f76ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#make day_var\n",
-    "day_var = pd.DataFrame(pd.date_range(df['Date'].min(), df['Date'].max()))\n",
-    "day_var.columns = ['Date_Range']\n",
-    "day_var['day_var'] = [d.strftime(\"%x\") for d in day_var['Date_Range']]\n",
-    "day_var = day_var.drop('Date_Range', axis = 1).reset_index()\n",
-    "df = df.merge(day_var, how = 'left', left_on = 'Date_2', right_on = 'day_var')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "db403394",
+   "id": "08c80596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,176 +194,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "503f81a3",
+   "execution_count": 12,
+   "id": "89f28b24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('ESM_all.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b23c5ffa",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/2g/qx04w6j525l446ptr2wd9w8w0000gn/T/ipykernel_1109/3282089736.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/2g/qx04w6j525l446ptr2wd9w8w0000gn/T/ipykernel_24792/132494792.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_beep_3['consecutive'] = df_beep_3['day_var'].diff()\n"
+      "  df_first['consecutive'] = df_first['day_var'].diff()\n"
      ]
-    }
-   ],
-   "source": [
-    "df_beep_3 = df[df['beep_var'] == 3]\n",
-    "df_beep_3['consecutive'] = df_beep_3['day_var'].diff()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "f4f14a9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_beep_3.to_csv('df_beep_3.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "da17171e",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "2      NaN\n",
-       "5      1.0\n",
-       "7      1.0\n",
-       "10     1.0\n",
-       "12     1.0\n",
-       "14     1.0\n",
-       "19     2.0\n",
-       "22     1.0\n",
-       "25     1.0\n",
-       "28     2.0\n",
-       "31     1.0\n",
-       "34     1.0\n",
-       "36     1.0\n",
-       "38     1.0\n",
-       "40     1.0\n",
-       "43     1.0\n",
-       "46     1.0\n",
-       "48     1.0\n",
-       "51     2.0\n",
-       "54     1.0\n",
-       "57     1.0\n",
-       "59     1.0\n",
-       "61     1.0\n",
-       "64     1.0\n",
-       "67     1.0\n",
-       "69     1.0\n",
-       "72     1.0\n",
-       "74     1.0\n",
-       "75     1.0\n",
-       "78     1.0\n",
-       "80     1.0\n",
-       "83     1.0\n",
-       "86     1.0\n",
-       "88     1.0\n",
-       "90     1.0\n",
-       "93     1.0\n",
-       "95     1.0\n",
-       "99     2.0\n",
-       "102    1.0\n",
-       "104    1.0\n",
-       "108    2.0\n",
-       "110    1.0\n",
-       "113    2.0\n",
-       "116    1.0\n",
-       "124    4.0\n",
-       "127    1.0\n",
-       "130    1.0\n",
-       "132    1.0\n",
-       "137    4.0\n",
-       "138    1.0\n",
-       "Name: consecutive, dtype: float64"
+       "1    141\n",
+       "2    120\n",
+       "3     68\n",
+       "Name: beep_var, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_beep_3['consecutive'].head(50)"
+    "# Given the missingness in the data, we simply subselect for the first observation (beep) recorded on a given day\n",
+    "df_first = df.drop_duplicates(subset='day_var', keep='first', inplace=False, ignore_index=False)\n",
+    "df_first['consecutive'] = df_first['day_var'].diff()\n",
+    "#check which beeps we are actually using\n",
+    "df_first['beep_var'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58dd3ac2",
+   "execution_count": 13,
+   "id": "4364637f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "4a58483a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "github_issue = df[['SentAt', 'Control', 'Sad', 'Intrusion', 'Encourage', \n",
-    "         'FunThings', 'IgotThis', 'Alone', 'Thoughts', \n",
-    "         'Appointments', 'Laying',\n",
-    "         'Out', 'Eaten', 'Avoid', 'Useful ', 'Enjoy', 'day_var', 'beep_var', 'id_var']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "370cd265",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "github_issue.to_csv('ESM_data_github_issue.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92f526f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df.shape)\n",
-    "print(df.isna().sum().sum())\n",
-    "print(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "800759f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#first = 16/03/2017\n",
-    "#last = 27/04/2018\n",
-    "# just over a year in scope\n",
-    "# note that we have 544 obs but not evenly spaces out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5737fdb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
+    "df_first.to_csv('ESM_first.csv')"
    ]
   }
  ],
