--- a/temporal_analysis_brownlees.ipynb
+++ b/temporal_analysis_brownlees.ipynb
@@ -78,6 +78,22 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "04121dcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make idvar\n",
+    "df['id_var'] = 1\n",
+    "#make date\n",
+    "df['Date'] = pd.to_datetime(df['SentAt'], format = '%d/%m/%Y %H:%M')\n",
+    "#get the date and hour\n",
+    "df['Date_2'] = [d.strftime(\"%x\") for d in df['Date']]\n",
+    "df['Hour'] = [d.strftime(\"%H\") for d in df['Date']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "980f8351",
    "metadata": {},
    "outputs": [],
@@ -85,32 +101,6 @@
     "#high number of nas so we drop them\n",
     "df = df.drop(columns = ['StartedAt', 'Qualitysleep', 'Pleasant', 'Unpleasant', 'Remarks'])\n",
     "#note that we still capture pleasant and unpleasant through the binary variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "403a7ce4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21    691\n",
-       "0     544\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check if the nas are just empty observations for all variables\n",
-    "na_count = [df.iloc[x, :].isna().sum() for x in range(0, len(df))]\n",
-    "pd.Series(na_count).value_counts()\n",
-    "#yes they are"
    ]
   },
   {
@@ -132,23 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "04121dcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#make idvar\n",
-    "df['id_var'] = 1\n",
-    "#make date\n",
-    "df['Date'] = pd.to_datetime(df['SentAt'], format = '%d/%m/%Y %H:%M')\n",
-    "#get the date and hour\n",
-    "df['Date_2'] = [d.strftime(\"%x\") for d in df['Date']]\n",
-    "df['Hour'] = [d.strftime(\"%H\") for d in df['Date']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c3ffc58d",
+   "id": "291a6fff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,10 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8ee62a94",
+   "execution_count": 8,
+   "id": "aefbf985",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
     "#clean by dropping unnecessary columns and renaming columns\n",
     "df = df.drop(['first_obs', 'second_obs', 'third_obs', 'day_var'], axis = 1)\n",
@@ -189,13 +171,28 @@
     "#conver variables to string\n",
     "#df['day_var'] = df['day_var'].astype(str)\n",
     "#df['id_var'] = df['id_var'].astype(str)\n",
-    "#df['beep_var'] = df['beep_var'].astype(str)"
+    "#df['beep_var'] = df['beep_var'].astype(str)\n",
+    "#print max gap between days\n",
+    "print(df['consecutive'].max())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bea4f4fb",
+   "execution_count": null,
+   "id": "c8914861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check if the nas are just empty observations for all variables\n",
+    "na_count = [df.iloc[x, :].isna().sum() for x in range(0, len(df))]\n",
+    "pd.Series(na_count).value_counts()\n",
+    "#yes they are"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56a9ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,36 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4d287686",
+   "execution_count": null,
+   "id": "c975f445",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2g/qx04w6j525l446ptr2wd9w8w0000gn/T/ipykernel_27208/132494792.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_first['consecutive'] = df_first['day_var'].diff()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1    141\n",
-       "2    120\n",
-       "3     68\n",
-       "Name: beep_var, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Given the missingness in the data, we simply subselect for the first observation (beep) recorded on a given day\n",
     "df_first = df.drop_duplicates(subset='day_var', keep='first', inplace=False, ignore_index=False)\n",
@@ -244,38 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "706c6e12",
+   "execution_count": null,
+   "id": "365917bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/2g/qx04w6j525l446ptr2wd9w8w0000gn/T/ipykernel_27208/2489634510.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_first['beep_var_consecutive'] = df_first['beep_var'].diff()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       " 0.0    133\n",
-       " 1.0     82\n",
-       "-1.0     72\n",
-       "-2.0     23\n",
-       " 2.0     18\n",
-       "Name: beep_var_consecutive, dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_first['beep_var_consecutive'] = df_first['beep_var'].diff()\n",
     "df_first['beep_var_consecutive'].value_counts()"
@@ -283,21 +226,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "76582533",
+   "execution_count": null,
+   "id": "de43dc0c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(329, 30)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_first.shape"
    ]
@@ -305,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aa8a74d",
+   "id": "a52efa47",
    "metadata": {},
    "outputs": [],
    "source": [
